--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ author: Michael Xu
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "about the club"
+  About the club: "google.com"
   Resources:
     - Schoology: "https://beautifuljekyll.com"
     - Contact: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Events: "https://deanattali.com"
 
 # --- Logo --- #
 
@@ -39,13 +39,13 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+  email: "xu_m@delbarton.org"
+ # rss: true  # remove this line if you don't want to show an RSS link at the bottom
+  #facebook: deanattali
+  #github: daattali
+  #twitter: daattali
+  #patreon: DeanAttali
+  #youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
