--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: Michael Xu
 navbar-links:
   About the club: "google.com"
   Resources:
-    - Schoology: "https://beautifuljekyll.com"
+    - Schoology: "https://app.schoology.com/group/786260409"
     - Contact: "https://www.markdowntutorial.com/"
   Events: "https://deanattali.com"
 
