--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ author: Michael Xu
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About the club: "https://michaelxu50.github.io/classicsclub/about"
+  About the club: "https://michaelxu50.github.io/classicsclub/about-the-club"
   Resources:
     - Schoology: "https://app.schoology.com/group/786260409"
-    - Contact: "https://www.markdowntutorial.com/"
-  Events: "https://deanattali.com"
+    - Contact: "https://michaelxu50.github.io/classicsclub/contact"
+  Events: "https://michaelxu50.github.io/classicsclub/events"
 
 # --- Logo --- #
 
