--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ navbar-links:
     - Schoology: "https://app.schoology.com/group/786260409"
     - Contact: "https://michaelxu50.github.io/classicsclub/contact"
   Events: "https://michaelxu50.github.io/classicsclub/events"
+  Leadership: "https://michaelxu50.github.io/classicsclub/leadership"
 
 # --- Logo --- #
 
